# tator-bridge

./: .gitignore  hello.py  pyproject.toml
tator_bridge/: helpers.py  tator_bridge.py
tests/: test_fastapi.py  test_tator_helpers.py
