[project]
name = "tator-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

    "cachier>=3.1.2",

    "fastapi>=0.115.5",

    "python-dotenv>=1.0.1",

    "tator>=1.3.16",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.0",
    "pytest>=8.3.4",
    "uvicorn>=0.32.1",
]
